--- a/src/hooks/osScreen/osScreen.css
+++ b/src/hooks/osScreen/osScreen.css
@@ -33,7 +33,7 @@
 .os-screen-bottom-text-box {
     position: absolute;
     bottom: 0px;
-    width: 100%;
+    width: 95%;
 }
 
 .os-screen-bottom-text {
